  These commands now require their filename argument to be quoted if
  it contains white space or quote characters.  If the argument
  contains no such special characters then quoting is not required.

maintenance print remote-registers
  Add an "Expedited" column to the output of the command.  It indicates
  which registers were included in the last stop reply packet received by
  GDB.

* New remote packets

vFile:stat
  Return information about files on the remote system.  Like
  vFile:fstat but takes a filename rather than an open file
  descriptor.

single-inf-arg in qSupported
  The new single-inf-arg feature within the qSupported packet allows
  GDB to inform the stub that it would like to send the inferior
  arguments as a single string within the vRun packet.  The stub can
  reply with the single-inf-arg feature to indicate that it is able to
  accept arguments as a single string.

*** Changes in GDB 15

* The MPX commands "show/set mpx bound" have been deprecated, as Intel
  listed MPX as removed in 2019.

* Building GDB and GDBserver now requires a C++17 compiler.
  For example, GCC 9 or later.

* GDB index now contains information about the main function.  This speeds up
  startup when it is being used for some large binaries.

* On hosts where threading is available, DWARF reading is now done in
  the background, resulting in faster startup.  This can be controlled
  using "maint set dwarf synchronous".

* GDB now accepts --no-escape-args as an alternative to --args on the
  command line.  GDB will not escape special shell characters within
  arguments after --no-escape-args.

* gdbserver now accepts --no-escape-args as a command line flag.  When
  this flag is used gdbserver will not escape special shell characters
  within the inferior arguments.

* Changed commands

disassemble
  Attempting to use both the 'r' and 'b' flags with the disassemble
  command will now give an error.  Previously the 'b' flag would
  always override the 'r' flag.

gcore